[tool.poetry]
name = "2models"
version = "0.1.0"
description = ""
authors = ["Gleb Budnik <budnikgleb@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^7.0.7"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
seaborn = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
